# quantragrpc

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  quantra.cpp  test.pl  test.py
.vscode.bak/: launch.json  settings.json
client/: CMakeLists.txt  Makefile  async_client.cpp  client  client.cpp  messages.cpp  messages.h
client/cpp/: async_client.cpp  fbs_to_quantra.cpp  fbs_to_quantra.h  json_to_fbs.cpp  json_to_fbs.h  quantra_call.cpp  quantra_call.h  quantra_client.cpp  quantra_client.h  quantra_structs.h  quantra_to_fbs.cpp  quantra_to_fbs.h
common/: common.cpp  common.h  enums.cpp  enums.h  error.cpp
envoy/: quantra.yaml  quantra_template.yaml
examples/: CMakeLists.txt  async_client.cpp  bond_request_example.cpp  bond_request_to_json.cpp  messages.cpp  messages.h  python_example.py  sync_client.cpp  test_bond.cpp
examples/data/: fixed_rate_bond_request.json  fixed_rate_bond_request_fbs.cpp  fixed_rate_bond_request_fbs.h  fixed_rate_bond_request_quantra.h  floating_rate_bond_request.json  test.cpp  test.h
examples/javascript/: package-lock.json  package.json
examples/javascript/src/: client.ts  quantraserver_grpc.d.ts
examples/javascript/src/quantra/: bond-helper.ts  deposit-helper.ts  error.ts  fixed-rate-bond-response.ts  fixed-rate-bond.ts  fixing.ts  floating-rate-bond.ts  flow-interest.ts  flow-past-interest.ts  flows-wrapper.ts  future-helper.ts  price-fixed-rate-bond-request.ts  price-fixed-rate-bond-response.ts  price-fixed-rate-bond.ts  price-floating-rate-bond-request.ts  price-floating-rate-bond.ts  pricing.ts  swap-helper.ts  term-structure.ts  yield.ts
examples/javascript/src/quantra/enums/: bootstrap-trait.ts  ibor.ts
examples/ts/: package-lock.json
examples/ts/src/: client.ts
examples/ts/src/quantra/: bond-helper.ts  deposit-helper.ts  error.ts  f-r-a-helper.ts  fixed-rate-bond-response.ts  fixed-rate-bond.ts  fixing.ts  floating-rate-bond.ts  flow-interest.ts  flow-notional.ts  flow-past-interest.ts  flows-wrapper.ts  future-helper.ts  index.ts  point.ts  points-wrapper.ts  price-fixed-rate-bond-request.ts  price-fixed-rate-bond-response.ts  price-fixed-rate-bond.ts  pricing.ts  schedule.ts  swap-helper.ts  term-structure.ts
examples/ts/src/quantra/enums/: business-day-convention.ts  compounding.ts  frequency.ts  interpolator.ts  time-unit.ts
flatbuffers/: CMakeLists.txt  Makefile  requests_generated.h
flatbuffers/cpp/: common_generated.h  fixed_rate_bond_generated.h  fixed_rate_bond_response_generated.h  floating_rate_bond_generated.h  floating_rate_bond_response_generated.h  index_generated.h  price_fixed_rate_bond_request_generated.h  price_floating_rate_bond_request_generated.h  requests_generated.h  responses_generated.h  schedule_generated.h  term_structure_generated.h
flatbuffers/fbs/: CMakeCache.txt  Makefile  bonds.fbs  bonds_generated.h  cmake_install.cmake  common.fbs  common_generated.h  coupon_pricer.fbs  curve_points_generated.h  enums.fbs  enums_generated.h  fixed_rate_bond_response.fbs  floating_rate_bond_response.fbs  price_fixed_rate_bond_request.fbs  price_floating_rate_bond_request.fbs  requests.fbs  requests_generated.h  responses.fbs  responses_generated.h  schedule.fbs  schedule_generated.h  term_structure.fbs  term_structure_generated.h  term_structure_points.fbs  term_structure_points_generated.h
flatbuffers/html/: annotated.html  classes.html  common__generated_8h_source.html  dir_df511e5bd85cec96854b39d5e1c27aa8.html  enums__generated_8h_source.html  files.html  fixed__rate__bond__generated_8h_source.html  fixed__rate__bond__response__generated_8h_source.html  floating__rate__bond__generated_8h_source.html  floating__rate__bond__response__generated_8h_source.html  graph_legend.html  hierarchy.html  index.html  index__generated_8h_source.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_10.map  inherit_graph_10.md5  inherit_graph_11.map  inherit_graph_11.md5  inherit_graph_12.map  inherit_graph_12.md5  inherit_graph_13.map  inherit_graph_13.md5  inherit_graph_14.map  inherit_graph_14.md5  inherit_graph_15.map  inherit_graph_15.md5  inherit_graph_16.map  inherit_graph_16.md5  inherit_graph_17.map  inherit_graph_17.md5  inherit_graph_18.map  inherit_graph_18.md5  inherit_graph_19.map  inherit_graph_19.md5  inherit_graph_2.map  inherit_graph_2.md5  (+128 more)
flatbuffers/latex/: annotated.tex  hierarchy.tex  refman.tex  structquantra_1_1BondHelperBuilder.tex  structquantra_1_1DepositHelperBuilder.tex  structquantra_1_1ErrorBuilder.tex  structquantra_1_1FLATBUFFERS__FINAL__CLASS.tex  structquantra_1_1FLATBUFFERS__FINAL__CLASS__coll__graph.md5  structquantra_1_1FLATBUFFERS__FINAL__CLASS__inherit__graph.md5  structquantra_1_1FRAHelperBuilder.tex  structquantra_1_1FixedRateBondBuilder.tex  structquantra_1_1FixedRateBondResponseBuilder.tex  structquantra_1_1FixingBuilder.tex  structquantra_1_1FloatingRateBondBuilder.tex  structquantra_1_1FlowInterestBuilder.tex  structquantra_1_1FlowNotionalBuilder.tex  structquantra_1_1FlowPastInterestBuilder.tex  structquantra_1_1FlowTraits.tex  structquantra_1_1FlowTraits_3_01quantra_1_1FlowInterest_01_4.tex  (+22 more)
grpc/: CMakeLists.txt  Makefile  quantraserver.fbs  quantraserver.grpc.fb.cc  quantraserver.grpc.fb.h  quantraserver_generated.h  server  server.cpp
jsonserver/: Makefile  server.cpp
parser/: common_parser.cpp  common_parser.h  fixed_rate_bond_parser.cpp  fixed_rate_bond_parser.h  floating_rate_bond_parser.cpp  floating_rate_bond_parser.h  index_parser.cpp  pricer_parser.cpp  term_structure_parser.cpp  term_structure_parser.h  term_structure_point_parser.cpp  term_structure_point_parser.h
request/: fixed_rate_bond_pricing_request.cpp  fixed_rate_bond_pricing_request.h  floating_rate_bond_pricing_request.cpp  floating_rate_bond_pricing_request.h  quantra_request.h
scripts/: config_vars.sh  envoy_config.py  start.sh
server/: CMakeLists.txt  Makefile  async_server.cpp  server.cpp  services.cpp  services.h  sync_server.cpp
tests/: CMakeLists.txt  Makefile  request_data.h  test.cpp  test2.cpp  test_quantra.cpp
(+56 files in other folders)
